--- a/templates/index.html
+++ b/templates/index.html
@@ -278,7 +278,7 @@
             description: '{{ product.description|escapejs }}',
             price: '₹{{ product.price }}',
             unit: '{{ product.unit }}',
-            image: '{{ product.image.url|default:""|escapejs }}',
+            image: '{{ product.image.url|escapejs if product.image else "" }}',
             rating: {{ product.rating }},
             reviews: {{ product.reviews_count }},
             badge: '{{ product.badge|default:""|escapejs }}'
