--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,21 @@
   id="home"
   class="relative w-full h-[600px] md:h-[700px] overflow-hidden"
   x-data="{
-    activeSlide: {{ slides.0.id }},
+    activeSlide: null,
     slides: [
       {% for slide in slides %}
       {
         id: {{ slide.id }},
-        title: '{{ slide.title|escapejs }}',
-        subtitle: '{{ slide.subtitle|escapejs }}',
-        image: '{{ slide.image.url }}',
-        showButton: {{ slide.show_button|yesno:"true,false" }}
-      },
+        title: \"{{ slide.title|escapejs }}\",
+        subtitle: \"{{ slide.subtitle|escapejs }}\",
+        image: \"{{ slide.image.url }}\",
+        showButton: {{ slide.show_button|yesno:'true,false' }}
+      }{% if not forloop.last %},{% endif %}
       {% endfor %}
     ],
     startSlider() {
+      if (this.slides.length === 0) return
+      this.activeSlide = this.slides[0].id
       setInterval(() => {
         let index = this.slides.findIndex(
           s => s.id === this.activeSlide
